# opennavicat

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  _verify.py  _verify_ver.py  action.yml  opennavicat-cli.spec  opennavicat-gui.spec  pyproject.toml  pytest.ini  version_info.txt  version_info_cli.txt  进度监控.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml  security-audit.yml
.mypy_cache/3.10/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _locale.data.json  _locale.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  enum.data.json  enum.meta.json  fnmatch.data.json  fnmatch.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  ntpath.data.json  ntpath.meta.json  pathlib.data.json  pathlib.meta.json  posixpath.data.json  posixpath.meta.json  profile.data.json  profile.meta.json  re.data.json  re.meta.json  resource.data.json  resource.meta.json  (+16 more)
docs/: AI_MODULE.md  CLI_REFERENCE.md  DATA_FLOW.md  DEPLOYMENT.md  DEVELOPMENT.md  INDEX.md  PRIVACY.md  SECURITY.md  architecture.md  index.html  ui_prototype.html
docs/modules/: automation.md  connection.md  data_viewer.md  model_designer.md  object_designer.md  query_editor.md  sync_engine.md
docs/tutorials/: README.md  automated_backup.md  ecommerce_analysis.md  migration_mysql_to_pg.md
open_navicat/: __init__.py  app.py  cli_main.py  config.py  gui_main.py  main.py
open_navicat/cli/: __init__.py  ai_cmd.py  app.py  backup_cmd.py  cloud_cmd.py  conn_cmd.py  data_cmd.py  init_cmd.py  query_cmd.py  schema_cmd.py  snippet_cmd.py  sql_cmd.py  template_cmd.py
open_navicat/dal/: __init__.py  base_connector.py  connection_pool.py  duckdb_connector.py  local_config.py  mongo_connector.py  mysql_connector.py  postgresql_connector.py  redis_connector.py  sqlite_connector.py  ssh_tunnel.py
open_navicat/i18n/: __init__.py  en_US.json  zh_CN.json
open_navicat/models/: __init__.py  connection.py  query_result.py  table_schema.py
open_navicat/plugin/: __init__.py  base.py  manager.py
open_navicat/plugins/: __init__.py  json_export.py  webhook_notifier.py
open_navicat_rs/: index.html  package-lock.json  package.json
open_navicat_rs/src-tauri/: Cargo.toml  tauri.conf.json
open_navicat_rs/src-tauri/icons/: icon.icns
open_navicat_rs/src-tauri/src/: db.rs  lib.rs  main.rs
scripts/: build_nuitka.ps1  build_nuitka.sh  install.ps1  install.sh  run_gui.bat  setup_dev.sh
tests/: fixtures.py
vscode-extension/: .vscodeignore  extension.js  package.json
(+203 files in other folders)
