[package]
name = "opennavicat"
version = "0.1.0"
edition = "2021"

[lib]
name = "opennavicat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "any",
    "mysql",
    "postgres",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
